@@ -25,7 +25,7 @@
 
 #define DB_LEGACY_SCHEMA_VERSION       700
 #define DB_SCHEMA_VERSION_MAJOR        22
-#define DB_SCHEMA_VERSION_MINOR        36
+#define DB_SCHEMA_VERSION_MINOR        37
 
 #define DB_SCHEMA_VERSION_V22_MINOR    DB_SCHEMA_VERSION_MINOR
 
