@@ -24,6 +24,17 @@
 #include <nxevent.h>
 
 /**
+ * Upgrade from 22.36 to 22.37
+ */
+static bool H_UpgradeFromV36()
+{
+   // This schema upgrade only needed to indicate change of node flag meaning
+   // NF_IS_SMCLP replaced by NF_SNMP_SETTINGS_LOCKED
+   CHK_EXEC(SetMinorSchemaVersion(37));
+   return true;
+}
+
+/**
  * Upgrade from 22.35 to 22.36
  */
 static bool H_UpgradeFromV35()
@@ -719,6 +730,7 @@ static struct
    bool (* upgradeProc)();
 } s_dbUpgradeMap[] =
 {
+   { 36, 22, 37, H_UpgradeFromV36 },
    { 35, 22, 36, H_UpgradeFromV35 },
    { 34, 22, 35, H_UpgradeFromV34 },
    { 33, 22, 34, H_UpgradeFromV33 },
